--- a/gateway/ai_service/requirements.txt
+++ b/gateway/ai_service/requirements.txt
@@ -32,6 +32,7 @@ more-itertools==10.7.0
 mpmath==1.3.0
 murmurhash==1.0.13
 networkx==3.4.2
+gunicorn
 numba==0.61.2
 numpy==2.2.6
 nvidia-cublas-cu12==12.6.4.1
