--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,339 +1,193 @@
-name: 📚 Documentation CI/CD Pipeline
+name: Docs CI/CD Pipeline
 
 on:
   push:
     branches: [ main, develop ]
+    paths:
+      - 'docs/**'
+      - '.github/workflows/ci-cd.yml'
   pull_request:
-    branches: [ main ]
-  schedule:
-    # Run tests daily at 2 AM UTC
-    - cron: '0 2 * * *'
+    branches: [ main, develop ]
+    paths:
+      - 'docs/**'
+      - '.github/workflows/ci-cd.yml'
   workflow_dispatch:
-    # Allow manual triggers
 
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+env:
+  NODE_VERSION: '18.0.0'
 
 jobs:
-  # ✅ TESTING JOB
   test:
-    name: 🧪 Run Tests
+    name: Test & Coverage
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-    
     steps:
-    - name: 📥 Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: 🔧 Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
+        cache-dependency-path: docs/package-lock.json
         
-    - name: 📦 Install dependencies
-      run: |
-        npm ci
-        npm install --save-dev @vitest/coverage-v8
-        
-    - name: 🏗️ Create required directories
-      run: |
-        mkdir -p tests utils scripts coverage
-        
-    - name: ✅ Validate VitePress configuration
-      run: |
-        # Check if VitePress config exists and is valid
-        node -e "
-          try {
-            const { execSync } = require('child_process');
-            execSync('npx vitepress --version', { stdio: 'pipe' });
-            console.log('✅ VitePress is properly installed');
-          } catch (error) {
-            console.error('❌ VitePress validation failed');
-            process.exit(1);
-          }
-        "
-        
-    - name: 🧪 Run unit tests
-      run: |
-        npm run test:unit
-        
-    - name: 📊 Run coverage analysis
-      run: |
-        npm run test:unit:coverage
-        
-    - name: 📈 Check coverage threshold
-      run: |
-        node -e "
-          const fs = require('fs');
-          try {
-            if (fs.existsSync('coverage/coverage-summary.json')) {
-              const coverage = JSON.parse(fs.readFileSync('coverage/coverage-summary.json', 'utf8'));
-              const totalCoverage = coverage.total.lines.pct;
-              console.log(\`Total coverage: \${totalCoverage}%\`);
-              
-              if (totalCoverage >= 40) {
-                console.log('✅ Coverage threshold met (40%)');
-                process.exit(0);
-              } else {
-                console.log('⚠️ Coverage below threshold (40%)');
-                process.exit(1);
-              }
-            } else {
-              console.log('⚠️ Coverage analysis not available, but tests passed');
-              process.exit(0);
-            }
-          } catch (error) {
-            console.log('⚠️ Coverage check failed, but continuing');
-            process.exit(0);
-          }
-        "
-        
-    - name: 📝 Validate markdown content
-      run: |
-        # Check that all markdown files are valid and have content
-        find docs -name "*.md" -not -path "./node_modules/*" -not -path "./docs/.vitepress/cache/*" | while read file; do
-          if [ ! -s "$file" ]; then
-            echo "❌ Empty markdown file: $file"
-            exit 1
-          fi
-          echo "✅ Validated: $file"
-        done
-        
-    - name: 📋 Upload coverage reports
+    - name: Install dependencies
+      working-directory: ./docs
+      run: npm ci
+      
+    - name: Run unit tests
+      working-directory: ./docs
+      run: npm run test:unit
+      
+    - name: Run tests with coverage
+      working-directory: ./docs
+      run: npm run test:unit:coverage
+      
+    - name: Run link validation
+      working-directory: ./docs
+      run: npm run test:links
+      
+    - name: Run health checks
+      working-directory: ./docs
+      run: npm run test:health
+      
+    - name: Upload coverage reports
       uses: codecov/codecov-action@v3
-      if: matrix.node-version == '20.x'
       with:
-        files: ./coverage/coverage-final.json
-        flags: unittests
-        name: vitepress-docs-coverage
+        directory: ./docs/coverage
         fail_ci_if_error: false
-        
-    - name: 📦 Archive test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: test-results-${{ matrix.node-version }}
-        path: |
-          coverage/
-          test-report.json
-          
-  # 🔍 QUALITY CHECKS JOB
-  quality:
-    name: 🔍 Quality Checks
+        verbose: true
+
+  lint:
+    name: Lint & Format Check
     runs-on: ubuntu-latest
     
     steps:
-    - name: 📥 Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
-    
-    - name: 🔧 Setup Node.js
+      
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20.x'
+        node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
+        cache-dependency-path: docs/package-lock.json
         
-    - name: 📦 Install dependencies
+    - name: Install dependencies
+      working-directory: ./docs
       run: npm ci
       
-    - name: 📝 Check markdown formatting
-      run: |
-        # Install markdownlint-cli
-        npm install -g markdownlint-cli
-        
-        # Run markdown linting
-        markdownlint "docs/**/*.md" --ignore node_modules --ignore docs/.vitepress/cache || true
-        
-    - name: 🔗 Check for broken links
-      run: |
-        # Install markdown-link-check
-        npm install -g markdown-link-check
-        
-        # Create markdown-link-check config
-        cat > .markdown-link-check.json << 'EOF'
-        {
-          "ignorePatterns": [
-            {
-              "pattern": "^http://localhost"
-            },
-            {
-              "pattern": "^https://localhost"
-            }
-          ],
-          "timeout": "20s",
-          "retryOn429": true,
-          "retryCount": 3,
-          "aliveStatusCodes": [200, 206, 301, 302, 303, 304, 307, 308]
-        }
-        EOF
-        
-        # Check internal links in markdown files
-        find docs -name "*.md" -not -path "./node_modules/*" -not -path "./docs/.vitepress/cache/*" | \
-        xargs markdown-link-check --config .markdown-link-check.json || true
-        
-    - name: 🔧 Check TypeScript
-      run: |
-        # Check TypeScript files for errors
-        npx tsc --noEmit || echo "TypeScript check completed with warnings"
-        
-  # 🏗️ BUILD JOB
+    # Run markdown linting (optional dependency)
+    - name: Run markdown linting
+      working-directory: ./docs
+      run: npm run lint
+      continue-on-error: true
+      
+    - name: Fix markdown issues
+      working-directory: ./docs
+      run: npm run lint:fix
+      continue-on-error: true
+
   build:
-    name: 🏗️ Build Documentation
+    name: Build Documentation
     runs-on: ubuntu-latest
-    needs: [test, quality]
+    needs: [test, lint]
     
     steps:
-    - name: 📥 Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: 🔧 Setup Node.js
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20.x'
+        node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
+        cache-dependency-path: docs/package-lock.json
         
-    - name: 📦 Install dependencies
+    - name: Install dependencies
+      working-directory: ./docs
       run: npm ci
       
-    - name: 🏗️ Build VitePress documentation
-      run: |
-        npm run build
-        
-    - name: 📊 Check build size
-      run: |
-        # Check that build was successful and has reasonable size
-        if [ -d "docs/.vitepress/dist" ]; then
-          DIST_SIZE=$(du -sh docs/.vitepress/dist | cut -f1)
-          echo "📊 Build size: $DIST_SIZE"
-          
-          # Check for essential files
-          if [ ! -f "docs/.vitepress/dist/index.html" ]; then
-            echo "❌ Missing index.html in build"
-            exit 1
-          fi
-          
-          echo "✅ Build validation successful"
-        else
-          echo "❌ Build directory not found"
-          exit 1
-        fi
-        
-    - name: 📦 Upload build artifact
+    - name: Build documentation
+      working-directory: ./docs
+      run: npm run build
+      
+    - name: Test build integrity
+      working-directory: ./docs
+      run: npm run test:build
+      
+    - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: vitepress-build
-        path: docs/.vitepress/dist/
-        retention-days: 7
-        
-  # 🚀 DEPLOY JOB (GitHub Pages)
-  deploy:
-    name: 🚀 Deploy to GitHub Pages
+        name: docs-build
+        path: docs/docs/.vitepress/dist/
+        retention-days: 30
+
+  # Optional: Docker build (matches your docker scripts)
+  docker:
+    name: Build Docker Image
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
     
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-      
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-      
     steps:
-    - name: 📥 Download build artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: vitepress-build
-        path: ./dist
-        
-    - name: 🔧 Setup Pages
-      uses: actions/configure-pages@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
       
-    - name: 📤 Upload to GitHub Pages
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: ./dist
-        
-    - name: 🚀 Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
       
-  # 🔒 SECURITY JOB
+    - name: Login to Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ghcr.io/${{ github.repository }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=sha,prefix={{branch}}-
+          
+    - name: Build Docker image
+      working-directory: ./docs
+      run: npm run docker:build
+      
+    - name: Tag and push Docker image
+      run: |
+        docker tag aidocs:latest ghcr.io/${{ github.repository }}:latest
+        docker push ghcr.io/${{ github.repository }}:latest
+
+  # Security scanning
   security:
-    name: 🔒 Security Audit
+    name: Security Scan
     runs-on: ubuntu-latest
     
     steps:
-    - name: 📥 Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
-    
-    - name: 🔧 Setup Node.js
-      uses: actions/setup-node@v4
+      
+    - name: Run npm audit
+      working-directory: ./docs
+      run: npm audit --audit-level=high
+      continue-on-error: true
+      
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
       with:
-        node-version: '20.x'
-        cache: 'npm'
+        scan-type: 'fs'
+        scan-ref: './docs'
+        format: 'sarif'
+        output: 'trivy-results.sarif'
         
-    - name: 📦 Install dependencies
-      run: npm ci
-      
-    - name: 🔒 Run security audit
-      run: |
-        npm audit --audit-level moderate || echo "Security audit completed with warnings"
-        
-    - name: 🔍 Check for sensitive information
-      run: |
-        # Check for potential secrets in documentation files
-        echo "🔍 Scanning for sensitive information..."
-        
-        # Check for common sensitive patterns
-        if grep -r -i "password\|secret\|token\|key\|api.*key" --include="*.md" docs/ --exclude-dir=node_modules --exclude-dir=.git; then
-          echo "⚠️ Potential sensitive information found in documentation"
-          echo "Please review the flagged content above"
-        else
-          echo "✅ No sensitive information detected"
-        fi
-        
-        # Check for TODO/FIXME that might need attention
-        TODO_COUNT=$(grep -r -i "todo\|fixme\|hack" --include="*.md" docs/ --exclude-dir=node_modules | wc -l || echo "0")
-        echo "📝 Found $TODO_COUNT TODO/FIXME items in documentation"
-        
-  # 📊 REPORTING JOB
-  reporting:
-    name: 📊 Generate Reports
-    runs-on: ubuntu-latest
-    needs: [test, quality, build]
-    if: always()
-    
-    steps:
-    - name: 📥 Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: 📊 Generate workflow summary
-      run: |
-        echo "# 📚 Documentation Pipeline Summary" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "## 🎯 Pipeline Results" >> $GITHUB_STEP_SUMMARY
-        echo "- **Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Triggered by:** ${{ github.event_name }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Run ID:** ${{ github.run_id }}" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "## 📋 Job Status" >> $GITHUB_STEP_SUMMARY
-        echo "- Tests: ${{ needs.test.result }}" >> $GITHUB_STEP_SUMMARY
-        echo "- Quality Checks: ${{ needs.quality.result }}" >> $GITHUB_STEP_SUMMARY
-        echo "- Build: ${{ needs.build.result }}" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        
-        if [ "${{ needs.test.result }}" = "success" ] && [ "${{ needs.quality.result }}" = "success" ] && [ "${{ needs.build.result }}" = "success" ]; then
-          echo "✅ **All checks passed! Documentation is ready for production.**" >> $GITHUB_STEP_SUMMARY
-        else
-          echo "❌ **Some checks failed. Please review the job details.**" >> $GITHUB_STEP_SUMMARY
-        fi
+    - name: Upload Trivy scan results
+      uses: github/codeql-action/upload-sarif@v3
+      if: always()
+      with:
+        sarif_file: 'trivy-results.sarif'
