ai service pipeline updates

--- a/gateway/ai_service/Dockerfile
+++ b/gateway/ai_service/Dockerfile
@@ -2,8 +2,13 @@
 FROM python:3.10-slim
 
 # Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    HOME=/home/dockeruser \
+    PATH="/home/dockeruser/.local/bin:$PATH" \
+    # Explicit cache paths to avoid permission issues
+    HF_HOME=/home/dockeruser/.cache/huggingface \
+    WHISPER_CACHE_DIR=/home/dockeruser/.cache/whisper
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
@@ -15,51 +20,36 @@ RUN apt-get update && apt-get install -y \
     wget \
     && rm -rf /var/lib/apt/lists/*
 
-# Create group and user matching host chl_ai group
-# IMPORTANT: Replace 1001 with your actual chl_ai group ID
+# Create group and user with explicit UID/GID (match host)
 RUN groupadd -g 1001 chl_ai && \
-    useradd -u 1000 -g chl_ai -m -s /bin/bash dockeruser
+    useradd -u 1000 -g chl_ai -m -s /bin/bash dockeruser && \
+    # Create cache directories with correct permissions
+    mkdir -p /home/dockeruser/.cache/{huggingface,whisper} && \
+    chown -R dockeruser:chl_ai /home/dockeruser/.cache
 
-# Upgrade pip, setuptools, wheel first to avoid build failures
-RUN pip install --upgrade pip setuptools wheel
+# Upgrade pip and configure (global)
+RUN pip install --upgrade pip setuptools wheel && \
+    mkdir -p /root/.pip && \
+    echo "[global]\ntimeout = 100\nretries = 10" > /root/.pip/pip.conf
 
-# Increase pip timeout and retries
-RUN mkdir -p /root/.pip && \
-    echo "[global]" > /root/.pip/pip.conf && \
-    echo "timeout = 100" >> /root/.pip/pip.conf && \
-    echo "retries = 10" >> /root/.pip/pip.conf
-
-# Set work directory and change ownership
+# Set work directory and install dependencies
 WORKDIR /app
-RUN chown dockeruser:chl_ai /app
-
-# Install Python dependencies as root (for system packages)
 COPY requirements.txt .
 RUN pip install --default-timeout=100 -r requirements.txt
 
-# Download spaCy medium language model (larger and better than sm)
-RUN python -m spacy download en_core_web_md
+# Download spaCy model (as root, then fix permissions)
+RUN python -m spacy download en_core_web_md && \
+    chown -R dockeruser:chl_ai /home/dockeruser/.cache
 
-# Copy the rest of the project files
+# Copy project files and set permissions
 COPY . .
 RUN chown -R dockeruser:chl_ai /app
 
-# Switch to dockeruser
+# Switch to dockeruser and configure user-level pip
 USER dockeruser
-
-# Set up user pip config
 RUN mkdir -p /home/dockeruser/.pip && \
-    echo "[global]" > /home/dockeruser/.pip/pip.conf && \
-    echo "timeout = 100" >> /home/dockeruser/.pip/pip.conf && \
-    echo "retries = 10" >> /home/dockeruser/.pip/pip.conf
+    echo "[global]\ntimeout = 100\nretries = 10" > /home/dockeruser/.pip/pip.conf
 
-# Set environment variables for user
-ENV HOME=/home/dockeruser
-ENV PATH="/home/dockeruser/.local/bin:$PATH"
-
-# Expose port
+# Expose port and run app
 EXPOSE 8000
-
-# Run Django app with Gunicorn
-# Replace 'your_project_name' with the actual project folder name
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers=4", "--threads=2", "--timeout=300", "ai_service.wsgi:application"]
