--- a/backend/api/composer.json
+++ b/backend/api/composer.json
@@ -1,5 +1,6 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^12.1"
+        "phpunit/phpunit": "^12.1",
+        "phpunit/php-code-coverage": "^12.3"
     }
 }
