--- a/backend/api/composer.json
+++ b/backend/api/composer.json
@@ -1,6 +1,28 @@
 {
+    "name": "ai/backend-api",
+    "description": "REST API Backend for AI Application",
+    "type": "project",
+    "license": "proprietary",
+    "require": {
+        "php": ">=8.2"
+    },
     "require-dev": {
-        "phpunit/phpunit": "^12.1",
+        "phpunit/phpunit": "^9.6",
         "phpunit/php-code-coverage": "^12.3"
-    }
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "."
+        }
+    },
+    "scripts": {
+        "test": "./phpunit tests/",
+        "test-coverage": "./phpunit tests/ --coverage-html coverage-report --coverage-text"
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
