--- a/backend/api/composer.json
+++ b/backend/api/composer.json
@@ -1,18 +1,17 @@
 {
     "name": "ai/backend-api",
-    "description": "REST API Backend for AI Application",
-    "type": "project",
+    "description": "REST API for AI Backend",
+    "type": "project", 
     "license": "proprietary",
     "require": {
         "php": ">=8.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6",
-        "phpunit/php-code-coverage": "^12.3"
+        "phpunit/phpunit": "^12.1"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "."
+            "Api\\": "."
         }
     },
     "scripts": {
