--- a/backend/api/composer.json
+++ b/backend/api/composer.json
@@ -7,7 +7,7 @@
         "php": ">=8.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^12.1"
+        "phpunit/phpunit": "^10.5|^11.0"
     },
     "autoload": {
         "psr-4": {
@@ -15,12 +15,15 @@
         }
     },
     "scripts": {
-        "test": "./phpunit tests/",
-        "test-coverage": "./phpunit tests/ --coverage-html coverage-report --coverage-text"
+        "test": "vendor/bin/phpunit tests/",
+        "test-coverage": "vendor/bin/phpunit tests/ --coverage-html coverage-report --coverage-text"
     },
     "config": {
         "optimize-autoloader": true,
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "8.2.0"
+        }
     },
     "minimum-stability": "stable",
     "prefer-stable": true
