--- a/gateway/ai_service/requirements.txt
+++ b/gateway/ai_service/requirements.txt
@@ -79,3 +79,5 @@ tokenizers==0.21.1
 torch==2.7.0
 tqdm==4.67.1
 transformers==4.52.3
+spacy==3.8.0
+en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl
