--- a/gateway/ai_service/requirements.txt
+++ b/gateway/ai_service/requirements.txt
@@ -1,7 +1,7 @@
 accelerate==1.7.0
 annotated-types==0.7.0
 asgiref==3.8.1
-blis==1.3.0
+blis==0.7.11
 catalogue==2.0.10
 certifi==2025.4.26
 charset-normalizer==3.4.2
@@ -33,8 +33,8 @@ mpmath==1.3.0
 murmurhash==1.0.13
 networkx==3.4.2
 numba==0.61.2
-numpy==2.2.6
-gunicorn==23.2.1
+numpy==1.26.4
+gunicorn==20.1.0
 # nvidia-cublas-cu12==12.6.4.1
 # nvidia-cuda-cupti-cu12==12.6.80
 # nvidia-cuda-nvrtc-cu12==12.6.77
@@ -66,18 +66,17 @@ scipy==1.15.3
 setuptools==80.9.0
 shellingham==1.5.4
 smart-open==7.1.0
-spacy==3.8.7
+spacy==3.7.6
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 sqlparse==0.5.3
 srsly==2.5.1
 sympy==1.14.0
-thinc==8.3.6
+thinc==8.2.5
 threadpoolctl==3.6.0
 tiktoken==0.9.0
 tokenizers==0.21.1
 torch==2.7.0
 tqdm==4.67.1
 transformers==4.52.3
-spacy==3.8.0
-en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl
+# en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl
