--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -1,21 +1,27 @@
-# Build stage - where we build our VitePress site
+# Build stage
 FROM node:18-alpine AS build
 
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
-RUN npm install
+RUN npm ci --no-audit --no-fund
 
 # Copy source and build
 COPY . .
 RUN npm run build
 
-# Production stage - where we serve the built site
+# Production stage
 FROM nginx:alpine
 
-# Copy built files to nginx
+# Copy custom nginx config
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Copy built files
 COPY --from=build /app/docs/.vitepress/dist /usr/share/nginx/html
+
+# Set permissions
+RUN chown -R nginx:nginx /usr/share/nginx/html
 
 EXPOSE 80
 
