--- a/frontend/call-center-case-mgmt/package.json
+++ b/frontend/call-center-case-mgmt/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -18,6 +23,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
-    "vite": "^6.3.5"
+    "@vitest/coverage-v8": "^1.6.1",
+    "@vitest/ui": "^1.6.1",
+    "@vue/test-utils": "^2.4.6",
+    "jsdom": "^23.2.0",
+    "vite": "^6.3.5",
+    "vitest": "^1.6.1"
   }
 }
