--- a/gateway/ai_service/docker-compose.yml
+++ b/gateway/ai_service/docker-compose.yml
@@ -1,47 +1,57 @@
+version: '3.9'
+
 services:
   web:
     build:
       context: .
-    deploy:
-      # resources:
-        # reservations:
-          # devices:
-            # - driver: nvidia  # Explicit driver declaration
-              # capabilities: [gpu]
-
     command: >
       gunicorn --bind 0.0.0.0:8000
-               --workers=1
-               --threads=2
+               --workers=2
+               --threads=4
                --timeout=300
                ai_service.wsgi:application
-
     ports:
       - "8000:8000"
-
     volumes:
       - .:/app
       - ./models:/app/models
-      # - /opt/chl_ai/models:/opt/chl_ai/models
-      # - /home/bitz/ai_models:/home/bitz/ai_models
-
     environment:
       PYTHONUNBUFFERED: "1"
       MODEL_CONFIG_PATH: /app/ai_service/config/models.yaml
-      CHL_AI_MODELS: /opt/chl_ai/models
-      CHL_AI_DATA: /opt/chl_ai/data
-      # NVIDIA_VISIBLE_DEVICES: all
-      # NVIDIA_DRIVER_CAPABILITIES: compute,utility
-
+      CHL_AI_MODELS: /app/models
+      CHL_AI_DATA: /app/audio_files
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
     working_dir: /app
-
     restart: always
-
+    depends_on:
+      - redis
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
       interval: 30s
       timeout: 10s
       retries: 3
 
-    # runtime: nvidia  # Required to access the GPU
+  celery:
+    build:
+      context: .
+    command: celery -A ai_service worker --loglevel=info
+    volumes:
+      - .:/app
+      - ./models:/app/models
+    environment:
+      PYTHONUNBUFFERED: "1"
+      MODEL_CONFIG_PATH: /app/ai_service/config/models.yaml
+      CHL_AI_MODELS: /app/models
+      CHL_AI_DATA: /app/audio_files
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+    working_dir: /app
+    depends_on:
+      - redis
 
+  redis:
+    image: redis:7.2-alpine
+    restart: always
+    ports:
+      - "6379:6379"
