--- a/gateway/ai_service/requirements.txt
+++ b/gateway/ai_service/requirements.txt
@@ -1,15 +1,23 @@
+
+-e .
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.2
 aiosignal==1.3.2
+amqp==5.3.1
 annotated-types==0.7.0
 asgiref==3.8.1
 async-timeout==5.0.1
 attrs==25.3.0
+billiard==4.2.1
 blis==0.7.11
 catalogue==2.0.10
+celery==5.5.3
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 cloudpathlib==0.21.1
 confection==0.1.5
 cymem==2.0.11
@@ -32,6 +40,7 @@ huggingface-hub==0.32.0
 idna==3.10
 Jinja2==3.1.6
 joblib==1.4.2
+kombu==5.5.4
 langcodes==3.5.0
 language_data==1.3.0
 llvmlite==0.44.0
@@ -54,6 +63,7 @@ pathlib_abc==0.1.1
 pathy==0.11.0
 pillow==11.2.1
 preshed==3.0.9
+prompt_toolkit==3.0.51
 propcache==0.3.1
 psycopg2-binary==2.9.10
 pyarrow==20.0.0
@@ -65,9 +75,11 @@ Pygments==2.19.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
+redis==6.2.0
 regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
+sacremoses==0.1.1
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.3
@@ -95,9 +107,12 @@ typing-inspection==0.4.1
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
+vine==5.1.0
 wasabi==1.1.3
+wcwidth==0.2.13
 weasel==0.4.1
 websockets==15.0.1
+whisper==1.1.10
 wrapt==1.17.2
 xxhash==3.5.0
 yarl==1.20.0
