--- a/gateway/ai_service/Dockerfile
+++ b/gateway/ai_service/Dockerfile
@@ -44,4 +44,4 @@ USER dockeruser
 
 EXPOSE 8000
 
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers=4", "--threads=2", "--timeout=300", "ai_service.wsgi:application"]
+CMD ["daphne", "-b", "0.0.0.0", "-p", "8000", "ai_service.asgi:application"]
