--- a/gateway/ai_service/docker-compose.yml
+++ b/gateway/ai_service/docker-compose.yml
@@ -5,11 +5,9 @@ services:
     build:
       context: .
     command: >
-      gunicorn --bind 0.0.0.0:8000
-               --workers=2
-               --threads=4
-               --timeout=300
-               ai_service.wsgi:application
+      daphne -b 0.0.0.0 -p 8000
+              --access-log -
+              ai_service.asgi:application
     ports:
       - "8000:8000"
     volumes:
@@ -17,7 +15,7 @@ services:
       - ./models:/app/models
     environment:
       PYTHONUNBUFFERED: "1"
-      MODEL_CONFIG_PATH: /app/ai_service/config/models.yaml
+      MODEL_CONFIG_PATH: /app/ai_service/config/model_config.yaml
       CHL_AI_MODELS: /app/models
       CHL_AI_DATA: /app/audio_files
       REDIS_HOST: redis
@@ -41,7 +39,7 @@ services:
       - ./models:/app/models
     environment:
       PYTHONUNBUFFERED: "1"
-      MODEL_CONFIG_PATH: /app/ai_service/config/models.yaml
+      MODEL_CONFIG_PATH: /app/ai_service/config/model_config.yaml
       CHL_AI_MODELS: /app/models
       CHL_AI_DATA: /app/audio_files
       REDIS_HOST: redis
